[package]
name = "f042-touchless-angle-sensor"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = ""
readme = "README.md"
license = "MIT License"
repository = ""
edition = "2018"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f042"] }
nb = "1.0.0"
cd74hc4067 = "0.2.0"
debugless-unwrap = "0.0.4"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = "thin"
codegen-units = 1
